# never_forget_bot

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  code-review.yml  deploy.yml  docker.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
migrations/: V000_create_table.sql  init.sql
parse_msg/: bot-key.json  checker.cpp  checker.hpp  generate_aim.cpp  generate_aim.h  parse.cpp  parse_request.cpp
postgresql/data/: initial_data.sql
postgresql/migrations/: V000_create_table.sql
postgresql/schemas/: db-1.sql  db_1.sql
src/: db.cpp  db.hpp  hello.cpp  hello.hpp  hello_test.cpp  main.cpp  parse-example.cpp
src/ai/: ai.cpp  ai.hpp
src/bot/: bot.cpp  bot.hpp
src/bot/commands/: change_tz.cpp  commands.hpp  help.cpp  start.cpp  upcoming-events.cpp  upcomming-events.cpp
src/bot/commands/messages/: messages.hpp
src/bot/handlers/: command_handlers.cpp  command_handlers.hpp
src/bot/handlers/callback/: callback.cpp  callback.hpp  change-event-status.cpp  delay-notification.cpp  time-zone.cpp  upcomming-event.cpp
src/bot/handlers/events/: events.cpp  events.hpp
src/bot/handlers/notifications/: notifications.cpp  notifications.hpp
src/bot/utils/: utils.cpp  utils.hpp
src/chrono/: periodic_task.cpp  periodic_task.hpp
src/db/: db.cpp  db.hpp  event.cpp  events.cpp  notification.cpp  users.cpp
src/event-creator/: event-creator.cpp  event-creator.hpp  event.hpp
src/models/: event.hpp  notification.hpp  user.hpp
src/parse_msg/: checker.cpp  checker.hpp  common.h  env_parser.cpp  env_parser.h  generate_aim.cpp  generate_aim.h  parse  parse.cpp  parse.hpp  parse_request.cpp  parse_request.h  prompt.json
tests/: conftest.py
unittests/: basic.cpp  bot_utils_test.cpp
